--- a/index.html
+++ b/index.html
@@ -170,6 +170,6 @@
             </div>
         </section>
     </main>
-    <script src="/js/script.min.js"></script>
+    <script src="js/script.min.js"></script>
 </body>
 </html>
