--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
                     <ul class="project__list">
                         <li class="project__item project__item--wella">
                             <a target="_blank" href="https://wellamilk.ru/">
-                                <img src="/img/logo/wella.png" alt="">
+                                <img src="img/logo/wella.png" alt="">
                             </a>
                         </li>
                         <li class="project__item project__item--oboi">
                             <a target="_blank" href="https://oboink.ru/">
-                                <img src="/img/logo/oboi.png" alt="">
+                                <img src="img/logo/oboi.png" alt="">
                             </a>
                         </li>
                         <li class="project__item project__item--unipromo">
                             <a target="_blank" href="https://new.unipromo.ru/">
-                                <img src="/img/logo/uni.png" alt="">
+                                <img src="img/logo/uni.png" alt="">
                             </a>
                         </li>
                         <li class="project__item project__item--soktour">
