--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         Привет! Меня зовут Илья и мне 22 года. Закончил профессиональный колледж по специальности "Разработчик веб и мультимедийных приложений" после чего прошёл срочную службу. Сам по себе я очень позитивный и добрый человек. Люблю дело, которым занимаюсь и хочу двигаться дальше, несмотря ни на что. Имею коммерчиский опыт в создании сайтов 1 год.
                     </p>
                     <div class="about__imgContainer">
-                        <img src="/img/bg/developer.jpg" alt="разработчик">
+                        <img src="img/bg/developer.jpg" alt="разработчик">
                     </div>
                 </div>
             </div>
@@ -132,25 +132,25 @@
                 <div class="technologies__contentWrapper">
                     <ul class="technologies__list">
                         <li class="technologies__item">
-                            <img src="/img/tech/html.png" alt="">
+                            <img src="img/tech/html.png" alt="">
                         </li>
                         <li class="technologies__item">
-                            <img src="/img/tech/css.jpg" alt="">
+                            <img src="img/tech/css.jpg" alt="">
                         </li>
                         <li class="technologies__item">
-                            <img src="/img/tech/js.jpg" alt="">
+                            <img src="img/tech/js.jpg" alt="">
                         </li>
                         <li class="technologies__item">
-                            <img src="/img/tech/gulp.png" alt="">
+                            <img src="img/tech/gulp.png" alt="">
                         </li>
                         <li class="technologies__item">
-                            <img src="/img/tech/bush.jpg" alt="">
+                            <img src="img/tech/bush.jpg" alt="">
                         </li>
                         <li class="technologies__item">
-                            <img src="/img/tech/sass.png" alt="">
+                            <img src="img/tech/sass.png" alt="">
                         </li>
                         <li class="technologies__item">
-                            <img src="/img/tech/es6.png" alt="">
+                            <img src="img/tech/es6.png" alt="">
                         </li>
                     </ul>
                 </div>
