--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                 <div class="technologies__contentWrapper">
                     <ul class="technologies__list technologies__list--newTech">
                         <li class="technologies__item">
-                            <img src="/img/tech/webpack.jpg" alt="">
+                            <img src="img/tech/webpack.jpg" alt="">
                         </li>
                         <li class="technologies__item technologies__item--react">
-                            <img src="/img/tech/react.jpg" alt="">
+                            <img src="img/tech/react.jpg" alt="">
                         </li>
                     </ul>
                 </div>
